--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "codesandbox": "^2.1.4",
     "emotion": "^9.1.2",
     "memoize-one": "^5.0.0",
+    "msbuild": "^1.0.3",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
     "react-input-autosize": "^2.2.1",
@@ -69,7 +71,7 @@
     "raf-schd": "^2.1.0",
     "raw-loader": "^0.5.1",
     "react": "^16.2.0",
-    "react-codesandboxer": "^2.0.1",
+    "react-codesandboxer": "^2.1.4",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
     "react-markings": "^1.3.0",
