--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,15 @@
 {
+  "plugins": ["emotion",     [
+    "@babel/plugin-proposal-class-properties",
+    {
+      "loose": true
+    }
+  ]
+],
   "presets": [
     "@babel/preset-env",
-    "@babel/preset-react"
-  ]
+    "@babel/preset-react",
+    "@babel/preset-flow"
+  ],
+  "ignore": ["node_modules"]
 }
