--- a/package.json
+++ b/package.json
@@ -11,17 +11,34 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "exports-loader": "^0.7.0",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.3.11",
-    "webpack": "^4.23.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.30.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.3.1",
+    "emotion": "^10.0.9",
+    "memoize-one": "^5.0.4",
+    "raf": "^3.4.1",
     "react": "^16.6.0",
-    "react-dom": "^16.6.0"
+    "react-bootstrap": "^1.0.0-beta.8",
+    "react-dom": "^16.6.0",
+    "react-input-autosize": "^2.2.1",
+    "react-transition-group": "^4.0.0"
   }
 }
